--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta property="og:description"
           content="Daedalus is a project taking you back to Ancient Greece. Four human teams wander the Labyrinth of Daedalus, austere dwelling of the Minotaur and its minions.">
     <meta property="og:url" content="http://mc-daedalus.com/">
-    <meta property="og:image" content="http://mc-daedalus.com/img/Logo_Daedalus.png">
+    <meta property="og:image" content="http://mc-daedalus.com/img/Logo_Daedalus.png" loading="lazy">
 
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" media='screen and (min-width: 576px)' href="index_576.css"/>
     <link rel="stylesheet" media='screen and (min-width: 768px)' href="index_768.css"/>
     <link rel="stylesheet" media='screen and (min-width: 992px)' href="index_992.css"/>
     <link rel="stylesheet" media='screen and (min-width: 1600px)' href="index_1200.css"/>
-    <link rel="icon" type="image/png" href="img/Minotaur_Daedalus_blanc.png"/>
+    <link rel="icon" type="image/png" href="img/Minotaur_Daedalus_blanc.png" loading="lazy"/>
     <script type="text/javascript">
 
         document.addEventListener("DOMContentLoaded", function () {
@@ -41,7 +41,7 @@
 <header>
     <div id="navigationWrapper" class="navigation_top">
         <div id="navigation" class="navigation_top">
-            <a href="#"><img src="img/Minotaur_Daedalus_blanc.png" id="logoHeader" alt="logoHeader"></a>
+            <a href="#"><img src="img/Minotaur_Daedalus_blanc.png" loading="lazy" id="logoHeader" alt="logoHeader"></a>
             <a href="#description" class="nav-link">Description</a>
             <a href="#download" class="nav-link">Téléchargement</a>
             <a href="#video" class="nav-link">Vidéo</a>
@@ -86,12 +86,12 @@
 
                     </p>
                 </div>
-                <img src="img/maze.jpg" width="600" height="750" style="object-fit: cover">
+                <img src="img/maze.jpg" width="600" height="750" style="object-fit: cover" loading="lazy">
             </div>
         </div>
         <div class="content" style="background-color: #E5E5E5">
             <div class="subContent">
-                <img src="img/temple.jpg" width="600" height="750" style="object-fit: cover">
+                <img src="img/temple.jpg" width="600" height="750" style="object-fit: cover" loading="lazy">
                 <div class="textContent left">
                     <h3>Des dieux uniques avec de nouvelles mécaniques</h3>
                     <p>Grâce aux temples, chaque équipe hormis celle du Minotaure peut invoquer un dieu grec parmi les
@@ -126,7 +126,7 @@
                         En bref, Daedalus propose un départ rapide et équilibré puis une exploration rentable pour
                         forger vos meilleures armes !</p>
                 </div>
-                <img src="img/dungeon.jpg" width="600" height="750" style="object-fit: cover">
+                <img src="img/dungeon.jpg" width="600" height="750" style="object-fit: cover" loading="lazy">
             </div>
         </div>
 
@@ -139,7 +139,7 @@
                 <p>Contributeurs</p>
             </div>
             <div class="block">
-                <img src="img/rating.png" width="420px" height="80px" alt="src">
+                <img src="img/rating.png" width="420px" height="80px" alt="src" loading="lazy">
                 <p>Vote Spigot</p>
             </div>
             <div class="block">
@@ -150,7 +150,7 @@
     </div>
 
     <div id="openSource">
-        <img src="img/github.svg" width="200px">
+        <img src="img/github.svg" width="200px" loading="lazy">
         <p>Daedalus est un projet open-source et communautaire, afin que tout le monde puisse jouer dessus et proposer
             publiquement des améliorations.</p>
     </div>
@@ -161,7 +161,7 @@
         <div id="downloadBlock">
             <a href="https://github.com/zelytra/Daedalus/releases/download/0.8/Daedalus-1.0.jar">
                 <p>Daedalus-0.8.java</p>
-                <img src="img/download.svg" width="110px">
+                <img src="img/download.svg" width="110px" loading="lazy">
             </a>
         </div>
     </div>
@@ -172,7 +172,7 @@
             <iframe width="2032" height="879" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                    allowfullscreen loading="lazy"></iframe>
         </div>
     </div>
 
